# pathfinder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
crates/pathfinder-core/: Cargo.toml
crates/pathfinder-core/src/: engine.rs  lib.rs  metrics.rs  rng.rs
crates/pathfinder-core/src/generate/: aldous_broder.rs  binary_tree.rs  dfs.rs  eller.rs  growing_tree.rs  hunt_and_kill.rs  kruskal.rs  mod.rs  prim.rs  sidewinder.rs  wilson.rs
crates/pathfinder-core/src/maze/: circular.rs  grid.rs  hex.rs  mod.rs  triangle.rs
crates/pathfinder-core/src/solve/: astar.rs  bfs.rs  dead_end_filling.rs  dfs_solver.rs  dijkstra.rs  greedy_bfs.rs  mod.rs  tremaux.rs  wall_follower.rs
mockups/: a-sidebar.html  b-toolbar.html  c-hud.html
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  i18n.ts
web/src/components/controls/: PlaybackControls.tsx  PresetPicker.tsx
web/src/components/export/: ExportMenu.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/components/maze/: ComparisonView.tsx  MazeCanvas.tsx
web/src/components/metrics/: CompareResults.tsx  MetricsPanel.tsx  RealtimeGraph.tsx  RunHistory.tsx
web/src/hooks/: useShareUrl.ts
web/src/rendering/: mazeRenderer.ts
web/src/stores/: maze.ts
web/src/styles/: global.css
web/src/wasm/: bridge.ts
