[package]
name = "pathfinder-core"
version = "0.1.0"
edition = "2021"
authors = ["Artem"]
license = "MIT"
description = "Maze generation and solving algorithms compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

